# python-autograph-utils

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/workflows/: lint.yml  publish.yml  test.yml
autograph_utils/: __init__.py  __main__.py  cli.py  main.py
docs/: Makefile  conf.py  index.rst
python_autograph_utils/: __init__.py  cli.py
src/autograph_utils/: __init__.py  __main__.py  main.py
tests/: __init__.py  normandy.content-signature.mozilla.org-2019-12-04-18-15-23.chain  test_autograph_utils.py  test_python_autograph_utils.py
