[project]
dynamic = ["version", "dependencies"]
name = "autograph-utils"
description = "autograph-utils is a tool to configure a kinto server from an YAML file."
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
]
keywords = ["autograph"]
authors = [
  {name = "Mozilla Services", email = "dev-webdev@lists.mozilla.org"},
]

[project.urls]
Repository = "https://github.com/mozilla-services/autograph-utils"

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cache",
    "pytest-aiohttp",
    "pytest-cov",
    "aioresponses",
]

[project.scripts]
autograph_utils = "autograph_utils.cli:main"

[tool.pip-tools]
generate-hashes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
relative_files = true

[tool.ruff]
line-length = 99
extend-exclude = [
    "__pycache__",
    ".venv/",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # flake8
    "F",
    # isort
    "I",
]
ignore = [
    # `format` will wrap lines.
    "E501",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
